--- a/index.html
+++ b/index.html
@@ -558,14 +558,11 @@
                     <a href="https://wa.me/6285817048266" target="_blank" class="text-gray-400 hover:text-green-400 transition-colors">
                         <i class="fab fa-whatsapp text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-blue-400 transition-colors">
+                    <a href="https://www.instagram.com/eexxvvn/" class="text-gray-400 hover:text-blue-400 transition-colors">
                         <i class="fab fa-instagram text-xl"></i>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-blue-300 transition-colors">
+                    <a href="https://id.linkedin.com/in/arif-permana-putrasuryana-121b761b9" class="text-gray-400 hover:text-blue-300 transition-colors">
                         <i class="fab fa-linkedin text-xl"></i>
-                    </a>
-                    <a href="#" class="text-gray-400 hover:text-gray-300 transition-colors">
-                        <i class="fab fa-github text-xl"></i>
                     </a>
                 </div>
             </div>
