--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center" data-aos="fade-right">
                     <div class="relative">
                         <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-primary shadow-lg">
-                            <img src="https://miro.medium.com/v2/resize:fit:2400/1*99hHL9XJ7EzQeC6RB5_Qiw.jpeg" alt="Arif Permana Putrasuryana" class="w-full h-full object-cover">
+                            <img src="arif.jpeg" alt="Arif Permana Putrasuryana" class="w-full h-full object-cover">
                         </div>
                         <div class="absolute -bottom-4 -right-4 w-20 h-20 bg-blue-600 rounded-full flex items-center justify-center shadow-lg">
                             <i class="fas fa-laptop-code text-white text-2xl"></i>
